migrate py to js Migrated from python server to node.js server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,18 @@ services:
   python-server:
     build:
       context: ./python-server
-      dockerfile: Dockerfile
     ports:
-      - 8000:8000
+      - "8000:8000"
     volumes:
-      - ./python-server/src:/app/src
+      - ./python-server:/app
+    command: ["uvicorn", "src.main:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
+
+  js-express-server:
+    build:
+      context: ./js-express-server
+    ports:
+      - "8001:8001"
+    volumes:
+      - ./js-express-server:/app
+      - /app/node_modules
+    command: ["yarn", "dev"]
